<resources>
    <string name="app_name">Piosenki Gitarowe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Piosenki gitarowe</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_placeholder">Title</string>
    <string name="artist_placeholder">Placeholder</string>
    <string name="no_song_label">No Song</string>

    <string name="polish">Polskie</string>
    <string name="foreign">Zagraniczne</string>

    <string name="music_genre">Gatunek</string>
    <string name="rock">Rock</string>
    <string name="pop">Pop</string>
    <string name="folk">Folk</string>
    <string name="disco_polo">Disco Polo</string>
    <string name="country">Country</string>
    <string name="reggae">Reggae</string>
    <string name="festive">Biesiadne</string>
    <string name="shanty">Szanty</string>

    <string name="settings">Ustawienia</string>
    <string name="all_songs">Wszystkie piosenki</string>
    <string name="search_hint">Szukaj piosenki, artysty…</string>
    <string name="search_fragment_tag">SearchFragmentTag</string>
    <string name="artists">Artyści</string>
    <string name="songs">Piosenki</string>
    <string name="no_songs_communicate">Nie znaleziono żadnej piosenki.</string>
    <string name="no_artists_communicate">Nie znaleziono żadnych artystów.</string>
    <string name="chord_pic_descrpition">Chord</string>
    <string name="chord">Akord</string>

    <string name="transpose">Transponuj</string>
    <string name="autoscrolling">Autoprzewijanie</string>
    <string name="add_to_favourite">Dodaj do ulubionych</string>
    <string name="favourite_songs">Ulubione piosenki</string>
    <string name="added_to_favourite">Dodany do ulubionych</string>
    <string name="transpose_value_default_txt">+0</string>
    <string name="semitone">półton</string>
    <string name="semitones">półtonów</string>
    <string name="semitones_plural_for_2_3_4">półtony</string>
    <string name="no_results_communicate">Nie znaleziono wyników.</string>
    <string name="too_many_results_communicate">Znaleziono zbyt wiele wyników. Zaktualizuj słowo kluczowe.</string>
    <string name="screen_blanking_preference_summary">Wygaszaj ekran podczas wyświetlania piosenki.</string>
    <string name="screen_blanking_preference_title">Wygaszanie ekranu</string>

    <string name="chord_text_size_preference_title">Wielkość akordów</string>
    <string name="switch_screen_blanking_pref_key">switch_screen_blanking</string>
    <string name="chord_text_size_pref_key">chord_text_size</string>
    <string name="lyrics_text_size_key">lyric_text_size</string>
    <string name="lyrics_text_size_preference_title">Wielkość tekstu piosenki</string>
    <string name="lyrics_and_chords_default_text_size">20</string>


    <string name="song">piosenka</string>
    <string name="songs_plural">piosenek</string>
    <string name="songs_plural_for_2_3_4">piosenki</string>
    <string name="no_favourite_songs_communicate">Brak ulubionych piosenek.</string>
    <string name="search">Szukaj</string>
    <string name="switch_animation_pref_key">switch_animation</string>
    <string name="animation_preference_summary">Wyświetlaj animacje przejścia przy zmianie okien aplikacji</string>
    <string name="animation_preference_title">Animacje przejścia</string>
    <string name="all">wszystkie</string>
    <string name="favourite">ulubione</string>
    <string name="genres">Gatunki</string>
    <string name="query_placeholder">Some query</string>
    <string name="other_that_artist">Piosenki artysty</string>
    <string name="listen_at_youtube">Posłuchaj na YouTube</string>
    <string name="listen_at_spotify">Posłuchaj na Spotify</string>
    <string name="intent_failure_message">Niepowodzenie. Nie znaleziono aplikacji.</string>
    <string name="about_application">O aplikacji</string>
    <string name="version">Wersja</string>
    <string name="app_author">Autor</string>
    <string name="no_artist">No Artist</string>
    <string name="no_queries">No Queries</string>
    <string name="no_songs">No Song</string>
    <string name="author_full_name">Wojciech Korczyński</string>


    <string-array name="font_size_entries">
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>24</item>
    </string-array>

    <string-array name="font_size_entry_values">
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>24</item>
    </string-array>




</resources>
