<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/other_from_artist"
        app:showAsAction="never"
        android:icon="@drawable/ic_artist"
        app:iconTint="@android:color/darker_gray"
        android:title="@string/other_that_artist"/>

    <item
        android:id="@+id/youtube"
        app:showAsAction="never"
        android:icon="@drawable/ic_youtube"
        app:iconTint="@android:color/darker_gray"
        android:title="@string/listen_at_youtube"/>

    <item
        android:id="@+id/spotify"
        app:showAsAction="never"
        android:icon="@drawable/ic_spotify"
        app:iconTint="@android:color/darker_gray"
        android:title="@string/listen_at_spotify"/>
</menu>